# gallerina

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  notes.md
backend/: .gitignore  Cargo.toml  build.rs  heaptrack.magick_test.670205.zst  heaptrack.magick_test.672819.zst  heaptrack.magick_test.676965.zst
backend/src/: exif.rs  ffmpeg.rs  hash.c  lib.rs  magick.rs  main.rs  models.rs  routes.rs  scanner.rs  state.rs  utils.rs
front/public/: custom.css  index.html  milligram.css
front/src/: App.svelte  Folder.svelte  Nav.svelte  globals.ts
frontend/: package-lock.json  package.json
frontend/public/: chota.css  custom.css  milligram.css.orig
frontend/src/: App.svelte  Control.svelte  Folder.svelte  Media.svelte  Nav.svelte  globals.ts
test/: README.md
test/gallery2/: antelope-with-horns_800.jxl
