[package]
name = "backend"
version = "1.0.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = "0.25.3"
structopt = "0.3"
# rand = "0.8.4"
# itertools = "0.10.1"
heed = "0.10.6"
# image = "0.23.14"
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["sqlite", "chrono", "runtime-async-std-native-tls"] }
http-types = "2.12.0"
percent-encoding = "2.1.0"
# pbr = "1.0.4"
# rayon = "1.5"
url = { version = "2.2.2", features = ["serde"] }
kamadak-exif = "0.5.4"
chrono = "0.4.19"
# ignore = "0.4"
log = { version = "0.4.14", features = ["kv_unstable"] }
env_logger = "0.9.0"
# crossbeam-utils = "0.8"
# crossbeam-channel = "0.5.1"
async-recursion = "0.2"
# async-channel = "1.6.1"
futures = { version = "0.3.17", features = ["executor", "thread-pool"] }
async-lock = "2.4.0"
parallel-stream = "2.1.3"
awaitgroup = "0.6.0"
num_cpus = "1.13.0"
magick_rust = "0.17.0"
either = "1.6.1"
futures-core = "0.3.17"
async-stream = "0.3.2"
# tempfile = "3.3"
# libc = "0.2.0"

# [patch.crates-io]
# magick_rust = { git = "https://github.com/nlfiedler/magick-rust", rev = "2e843d7336cd435dbd57f77a42481e332d3fe4e6" }
# sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "b419bf529823241a7fd598628919ab451fd7d136" }

[dev-dependencies]
tempfile = "3.2.0"
sha3 = "0.9.1"

[build-dependencies]
cc = "1.0"
